Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9222

QtCreator doesn't display custom PropertyEditor in some cases

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 3.2.1
    • Qt Creator 2.7.0
    • Quick Designer
    • None

      I have a qml module MyModule and with a component MyComponent.

      I have a MyComponentSpecifics file located withing property editor folder in qtcreator at MyModule/MyComponentSpecifics.qml.

      I have a project that use this module and the project contains 2 files:

      • MyDerivedComponent.qml : inherits MyComponent from MyModule and add some graphics
      • main.qml : instanciates MyDerivedComponent

      Use case #1 : I go in MyDerivedComponent.qml with designer, select the root node and can I see the custom property editor.
      Use case #2 : I go in main.qml with designer and select the instance of MyDerivedComponent and can I see the custom property editor. NOK => the designer doesn't display the custom property editor but the generic one.

        For Gerrit Dashboard: QTCREATORBUG-9222
        # Subject Branch Project Status CR V

            fawzi Fawzi Mohamed
            x-krys Christopher Courtois
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes