QmlDesigner.PropertyEditor: We fully qualify QML components

When collecting the super classes/types we did not fully
qualify QML components.
(e.g. just Button instead of QtQuick.Controls.Button)

This patch now fully qualifies the QML component.

The missing qualification broke the specifics mechanism in
the property editor (see task).

Task-number: QTCREATORBUG-9222
Change-Id: I61b6b6432493c1c440356547003269767415acb4
Reviewed-by: Marco Bubke <marco.bubke@digia.com>
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>